# passk

./: Cargo.toml
src/: main.rs  style.rs  vault.rs
src/data/: database.rs  entry.rs  field.rs  file.rs  mod.rs
src/ui/: entry.rs  entry_editor.rs  entry_tag_editor.rs  explorer.rs  field_editor.rs  field_generator.rs  mod.rs  password.rs
src/widgets/: checkbox.rs  combo_box.rs  confirm.rs  entry_editor.rs  field_editor.rs  form.rs  label.rs  mod.rs  popup.rs  text_input.rs  text_input_custom.rs  widget.rs
