[package]
name = "passk"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clipboard-rs = "0.3.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
rand = "0.9.2"
ratatui = "0.30.0-beta.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
