[package]
name = "passk"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
bincode2 = "2.0.1"
chacha20poly1305 = "0.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
clipboard-rs = "0.3.1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
rand = { version = "0.9.2", features = ["std"] }
ratatui = "0.30.0-beta.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
